# legogroth16

./: Cargo.toml  README.md
src/: constraints.rs  data_structures.rs  error.rs  generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
src/aggregation/: kzg.rs  mod.rs  prover.rs  tests.rs  utils.rs  verifier.rs
src/link/: matrix.rs  mod.rs  snark.rs
tests/: subspace_snark_tests.rs
