[package]
name = "legogro16"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-bls12-377 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-cp6-782 = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false }
# ark-ec = { version = "^0.4.0", default-features = false }
# ark-ff = { version = "^0.4.0", default-features = false }
# ark-poly = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
# ark-relations = { version = "^0.4.0", default-features = false }
# ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false }

ark-ff = { path = "../arkworks/algebra/ff" }
ark-ec = { path = "../arkworks/algebra/ec" }
ark-poly = { path = "../arkworks/algebra/poly" }
ark-relations = { path = "../arkworks/snark/relations" }
ark-serialize = { path = "../arkworks/algebra/serialize" }

# Other dependencies
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
derivative = { version = "2.0", features = ["use_core"]}
rayon = { version = "1" }

[dev-dependencies]
ark-mnt4-298 = { version = "^0.4.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel"]
print-trace = [ "ark-std/print-trace" ]
